--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pytest
 msgpack
 requests>=2.20
 numpy>=1.15
@@ -7,4 +8,4 @@ googlefinance.client~=1.3
 yfinance~=0.1
 pandas_datareader~=0.8
 streamlit~=0.51
-holoviews~=1.13
+plotly~=4.8
