--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ yfinance = "==0.1.74"
 pandas-datareader = "==0.10.0"
 streamlit = "==1.12.0"
 plotly = "==5.10.0"
+watchdog = "==2.1.9"
 
 [dev-packages]
 
